implementing ncalayer docker container